// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message if there is a sign in error 1`] = `
<div>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div>
      <span>
        <span />
        Email
      </span>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <span>
        <span />
        Password
      </span>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="current-password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <button
        type="submit"
      >
        <span>
          Sign In
        </span>
      </button>
    </div>
    <div>
      The account sign-in was incorrect or your account is disabled temporarily. Please wait and try again later.
    </div>
    <button
      onClick={[Function]}
      type="button"
    >
      Forgot password?
    </button>
  </form>
  <div />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      <span>
        Create an Account
      </span>
    </button>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div>
      <span>
        <span />
        Email
      </span>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <span>
        <span />
        Password
      </span>
      <span
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span>
          <input
            autoComplete="current-password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span />
        <span />
      </span>
      <p />
    </div>
    <div>
      <button
        type="submit"
      >
        <span>
          Sign In
        </span>
      </button>
    </div>
    <div />
    <button
      onClick={[Function]}
      type="button"
    >
      Forgot password?
    </button>
  </form>
  <div />
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      <span>
        Create an Account
      </span>
    </button>
  </div>
</div>
`;
